Post Captions spacing fix

--- a/src/components/post/post.module.scss
+++ b/src/components/post/post.module.scss
@@ -68,7 +68,7 @@
   padding-top: 24px;
   // padding-bottom: 11px;
   row-gap: 10px;
-  margin-bottom: 13px;
+  margin-bottom: 32px;
   align-items: baseline;
 
 }
